@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2018 Antti Ajanki
 Distributed under the GPL v3
 
+<Unreleased>
+
+- Fixed downloading of Areena audio streams
+
 Version 20181103
 
 - yle-dl will use date-based version numbers from now on
